header section added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Best Player Ever You Seen</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <header class=" mx-auto text-center">
+        <h1 class="text-danger display-1 fw-semibold py-5 heading">The Best Player Ever You Seen</h1>
+        <p class="fs-4 ">The FIFA World Player of the Year award is  given annually to the  football player <br> who is thought to be the best in the world. Here are the award winners since 1991.</p>
+        <div class="soccer"><img src="./images/soccer.png" alt=""></div>
+        <div class="player-ball"><img src="./images/player-ball.png" alt=""></div>
+        <div class="logo"><img src="./images/psg.png" alt=""></div>
+        <div class="player-img"><img src="./images/player.png" alt=""></div>
+    </header>
+    
     <script src="./js/assingment.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
