--- a/index.html
+++ b/index.html
@@ -5,19 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Player Ever You Seen</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <header class=" mx-auto text-center">
+<body class="bg-black">
+    <header class=" mx-auto  text-center">
         <h1 class="text-danger display-1 fw-semibold py-5 heading">The Best Player Ever You Seen</h1>
         <p class="fs-4 ">The FIFA World Player of the Year award is  given annually to the  football player <br> who is thought to be the best in the world. Here are the award winners since 1991.</p>
-        <div class="soccer"><img src="./images/soccer.png" alt=""></div>
-        <div class="player-ball"><img src="./images/player-ball.png" alt=""></div>
-        <div class="logo"><img src="./images/psg.png" alt=""></div>
-        <div class="player-img"><img src="./images/player.png" alt=""></div>
     </header>
-    
+    <main>
+        <section>
+            <div class="row mx-5">
+                <div class="col-9">
+                    <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
+                        <div class="col">
+                          <div class="card h-100 bg-info">
+                            <img src="./images/player1.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                              <h5 id="player1-name" class="card-title">Leonal Messi</h5>
+                              <p class="card-text">36 Goals - 120 Assets</p>
+                            </div>
+                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                                <button id="player1-btn" class="btn btn-primary bg-black text-danger fs-4" type="button" >Button</button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100 bg-info">
+                            <img src="./images/player2.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                              <h5 id="player2-name" class="card-title">Neymar Jr</h5>
+                              <p class="card-text">54 Goals - 170 Assets</p>
+                            </div>
+                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                                <button id="player2-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100 bg-info">
+                            <img src="./images/player3.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                              <h5 id="player3-name" class="card-title">Kylian Mbappe</h5>
+                              <p class="card-text">19 Goals - 80 Assets</p>
+                            </div>
+                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                                <button id="player3-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100 bg-info">
+                            <img src="./images/player4.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                              <h5 id="player4-name" class="card-title">Vitor Machado</h5>
+                              <p class="card-text">49 Goals - 150 Assets</p>
+                            </div>
+                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                                <button id="player4-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100 bg-info">
+                            <img src="./images/player5.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                              <h5 id="player5-name" class="card-title">Sergio Ramos</h5>
+                              <p class="card-text">77 Goals - 112 Assets</p>
+                            </div>
+                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                                <button id="player5-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100 bg-info">
+                            <img src="./images/player6.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                              <h5 id="player6-name" class="card-title">Renato Sanches</h5>
+                              <p class="card-text">12 Goals - 39 Assets</p>
+                            </div>
+                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                                <button id="player6-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-3 bg-danger">
+                    <h2>Selected - V</h2>
+                    <div>
+                        <ol id="selected-players"></ol>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="./js/assingment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
