--- a/index.html
+++ b/index.html
@@ -111,62 +111,27 @@
                           <button id="calculate-btn" class="btn btn-primary bg-black text-danger fs-4" type="button" >Calculate</button>
                       </div>
                       <div>
-                        <h5>Player Expenses $ <span id="player-expenses">5000</span></h5>
+                        <h5>Player Expenses $ <span id="player-expenses"></span></h5>
                       </div>
 
                       <div class="row mb-3">
-                        <label for="inputEmail3" class="col-sm-4 col-form-label">Manager</label>
+                        <label for="manager-expense" class="col-sm-4 col-form-label">Manager</label>
                         <div class="col-sm-8">
-                          <input type="text" class="form-control" id="inputEmail3" value="">
+                          <input type="text" class="form-control" id="manager-expense" value="">
                         </div>
                       </div>
                       <div class="row mb-3">
-                        <label for="inputEmail3" class="col-sm-4 col-form-label">Coach</label>
+                        <label for="coach-expense" class="col-sm-4 col-form-label">Coach</label>
                         <div class="col-sm-8">
-                          <input type="text" class="form-control" id="inputEmail3" value="">
+                          <input type="text" class="form-control" id="coach-expense" value="">
                         </div>
                       </div>
                       <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                        <button id="player1-btn" class="btn btn-primary bg-black text-danger fs-4" type="button" >Calculate Total</button>
+                        <button id="total-btn" class="btn btn-primary bg-black text-danger fs-4" type="button" >Calculate Total</button>
                     </div>
                     <div>
-                      <h5> Total $ <span>15000</span></h5>
+                      <h5> Total $ <span id="total-expense">00</span></h5>
                     </div>
-
-                        <fieldset class="row mb-3">
-                          <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
-                          <div class="col-sm-10">
-                            <div class="form-check">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                              <label class="form-check-label" for="gridRadios1">
-                                First radio
-                              </label>
-                            </div>
-                            <div class="form-check">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                              <label class="form-check-label" for="gridRadios2">
-                                Second radio
-                              </label>
-                            </div>
-                            <div class="form-check disabled">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
-                              <label class="form-check-label" for="gridRadios3">
-                                Third disabled radio
-                              </label>
-                            </div>
-                          </div>
-                        </fieldset>
-                        <div class="row mb-3">
-                          <div class="col-sm-10 offset-sm-2">
-                            <div class="form-check">
-                              <input class="form-check-input" type="checkbox" id="gridCheck1">
-                              <label class="form-check-label" for="gridCheck1">
-                                Example checkbox
-                              </label>
-                            </div>
-                          </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Sign in</button>
                       </form>
                     </div>
                 </div>
