--- a/index.html
+++ b/index.html
@@ -1,144 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Player Ever You Seen</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-</head>
-<body class="bg-black">
-    <header class=" mx-auto  text-center">
-        <h1 class="text-danger display-1 fw-semibold py-5 heading">The Best Player Ever You Seen</h1>
-        <p class="fs-4 ">The FIFA World Player of the Year award is  given annually to the  football player <br> who is thought to be the best in the world. Here are the award winners since 1991.</p>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- fonts link -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- own css link  -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- bootstrap cdn link  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
+  </head>
+  <body class="bg-black">
+    <!-- header section start  -->
+    <header class="mx-auto text-center">
+      <div>
+        <img class="header-thumbnail" src="./images/player.png" alt="" />
+      </div>
+      <div>
+        <h1 class="text-danger display-1 fw-semibold py-5 heading">
+          The Best Player Ever You Seen
+        </h1>
+        <p class="fs-4 text-white">
+          The FIFA World Player of the Year award is given annually to the
+          football player <br />
+          who is thought to be the best in the world. Here are the award winners
+          since 1991. <br />watch untill now!
+        </p>
+      </div>
+      <div>
+        <img class="player-logo" src="./images/player-ball.png" alt="" />
+        <img class="logo" src="./images/psg.png" alt="" />
+      </div>
+      <div>
+        <img class="ball" src="./images/soccer.png" alt="" />
+      </div>
     </header>
     <main>
-        <section>
-            <div class="row mx-5">
-                <div class="col-9">
-                    <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
-                        <div class="col">
-                          <div class="card h-100 bg-info">
-                            <img src="./images/player1.png" class="card-img-top img-fluid" alt="...">
-                            <div class="card-body">
-                              <h5 id="player1-name" class="card-title">Leonal Messi</h5>
-                              <p class="card-text">36 Goals - 120 Assets</p>
-                            </div>
-                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                                <button id="player1-btn" class="btn btn-primary bg-black text-danger fs-4" type="button" >Button</button>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col">
-                          <div class="card h-100 bg-info">
-                            <img src="./images/player2.png" class="card-img-top img-fluid" alt="...">
-                            <div class="card-body">
-                              <h5 id="player2-name" class="card-title">Neymar Jr</h5>
-                              <p class="card-text">54 Goals - 170 Assets</p>
-                            </div>
-                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                                <button id="player2-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col">
-                          <div class="card h-100 bg-info">
-                            <img src="./images/player3.png" class="card-img-top img-fluid" alt="...">
-                            <div class="card-body">
-                              <h5 id="player3-name" class="card-title">Kylian Mbappe</h5>
-                              <p class="card-text">19 Goals - 80 Assets</p>
-                            </div>
-                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                                <button id="player3-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col">
-                          <div class="card h-100 bg-info">
-                            <img src="./images/player4.png" class="card-img-top img-fluid" alt="...">
-                            <div class="card-body">
-                              <h5 id="player4-name" class="card-title">Vitor Machado</h5>
-                              <p class="card-text">49 Goals - 150 Assets</p>
-                            </div>
-                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                                <button id="player4-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col">
-                          <div class="card h-100 bg-info">
-                            <img src="./images/player5.png" class="card-img-top img-fluid" alt="...">
-                            <div class="card-body">
-                              <h5 id="player5-name" class="card-title">Sergio Ramos</h5>
-                              <p class="card-text">77 Goals - 112 Assets</p>
-                            </div>
-                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                                <button id="player5-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col">
-                          <div class="card h-100 bg-info">
-                            <img src="./images/player6.png" class="card-img-top img-fluid" alt="...">
-                            <div class="card-body">
-                              <h5 id="player6-name" class="card-title">Renato Sanches</h5>
-                              <p class="card-text">12 Goals - 39 Assets</p>
-                            </div>
-                            <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                                <button id="player6-btn" class="btn btn-primary bg-black text-danger fs-4" type="button">Button</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+      <section>
+        <div class="row mx-5">
+          <div class="col-9">
+            <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
+              <!--==== player1 details ==== -->
+              <div class="col">
+                <div class="card h-100 bg-info">
+                  <img
+                    src="./images/player1.png"
+                    class="card-img-top img-fluid"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 id="player1-name" class="card-title">Leonal Messi</h5>
+                    <p class="card-text">36 Goals - 120 Assets</p>
+                  </div>
+                  <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                    <button
+                      id="player1-btn"
+                      class="btn btn-primary bg-black text-danger fs-4"
+                      type="button"
+                    >
+                      Button
+                    </button>
+                  </div>
                 </div>
-                <div class="col-3 bg-danger">
-                    <h2>Selected - V</h2>
-                    <div>
-                        <ol id="selected-players"></ol>
-                    </div>
-                    <div>
-                      <h3>Budget</h3>
-                      <form>
-                        <div class="row mb-3">
-                          <label for="player-cost" class="col-sm-4 col-form-label">Per Player</label>
-                          <div class="col-sm-8">
-                            <input type="text" class="form-control" id="player-cost" value="">
-                          </div>
-                        </div>
-                        
-                        <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                          <button id="calculate-btn" class="btn btn-primary bg-black text-danger fs-4" type="button" >Calculate</button>
-                      </div>
-                      <div>
-                        <h5>Player Expenses $ <span id="player-expenses"></span></h5>
-                      </div>
-
-                      <div class="row mb-3">
-                        <label for="manager-expense" class="col-sm-4 col-form-label">Manager</label>
-                        <div class="col-sm-8">
-                          <input type="text" class="form-control" id="manager-expense" value="">
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <label for="coach-expense" class="col-sm-4 col-form-label">Coach</label>
-                        <div class="col-sm-8">
-                          <input type="text" class="form-control" id="coach-expense" value="">
-                        </div>
-                      </div>
-                      <div class="d-grid gap-2 col-10 mx-auto mb-3">
-                        <button id="total-btn" class="btn btn-primary bg-black text-danger fs-4" type="button" >Calculate Total</button>
-                    </div>
-                    <div>
-                      <h5> Total $ <span id="total-expense">00</span></h5>
-                    </div>
-                      </form>
-                    </div>
+              </div>
+              <!--==== player2 details ==== -->
+              <div class="col">
+                <div class="card h-100 bg-info">
+                  <img
+                    src="./images/player2.png"
+                    class="card-img-top img-fluid"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 id="player2-name" class="card-title">Neymar Jr</h5>
+                    <p class="card-text">54 Goals - 170 Assets</p>
+                  </div>
+                  <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                    <button
+                      id="player2-btn"
+                      class="btn btn-primary bg-black text-danger fs-4"
+                      type="button"
+                    >
+                      Button
+                    </button>
+                  </div>
                 </div>
+              </div>
+              <!--==== player3 details ==== -->
+              <div class="col">
+                <div class="card h-100 bg-info">
+                  <img
+                    src="./images/player3.png"
+                    class="card-img-top img-fluid"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 id="player3-name" class="card-title">Kylian Mbappe</h5>
+                    <p class="card-text">19 Goals - 80 Assets</p>
+                  </div>
+                  <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                    <button
+                      id="player3-btn"
+                      class="btn btn-primary bg-black text-danger fs-4"
+                      type="button"
+                    >
+                      Button
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <!--==== player4 details ==== -->
+              <div class="col">
+                <div class="card h-100 bg-info">
+                  <img
+                    src="./images/player4.png"
+                    class="card-img-top img-fluid"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 id="player4-name" class="card-title">Vitor Machado</h5>
+                    <p class="card-text">49 Goals - 150 Assets</p>
+                  </div>
+                  <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                    <button
+                      id="player4-btn"
+                      class="btn btn-primary bg-black text-danger fs-4"
+                      type="button"
+                    >
+                      Button
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <!--==== player5 details ==== -->
+              <div class="col">
+                <div class="card h-100 bg-info">
+                  <img
+                    src="./images/player5.png"
+                    class="card-img-top img-fluid"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 id="player5-name" class="card-title">Sergio Ramos</h5>
+                    <p class="card-text">77 Goals - 112 Assets</p>
+                  </div>
+                  <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                    <button
+                      id="player5-btn"
+                      class="btn btn-primary bg-black text-danger fs-4"
+                      type="button"
+                    >
+                      Button
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <!--==== player6 details ==== -->
+              <div class="col">
+                <div class="card h-100 bg-info">
+                  <img
+                    src="./images/player6.png"
+                    class="card-img-top img-fluid"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 id="player6-name" class="card-title">Renato Sanches</h5>
+                    <p class="card-text">12 Goals - 39 Assets</p>
+                  </div>
+                  <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                    <button
+                      id="player6-btn"
+                      class="btn btn-primary bg-black text-danger fs-4"
+                      type="button"
+                    >
+                      Button
+                    </button>
+                  </div>
+                </div>
+              </div>
             </div>
-        </section>
+          </div>
+
+          <!-- calculation-feild-start -->
+
+          <div class="col-3 calculation-field">
+            <h2 class="text-center mt-4">Selected - V</h2>
+            <div class="selected-five">
+              <ol id="selected-players"></ol>
+            </div>
+            <div>
+              <h3 class="text-center mb-4">Budget</h3>
+              <form>
+                <!-- player cost div start  -->
+                <div class="row mb-2">
+                  <label
+                    for="player-cost"
+                    class="col-sm-4 col-form-label fs-5 text-center mb-3 fw-semibold"
+                    >Per Player</label
+                  >
+                  <div class="col-sm-6">
+                    <input
+                      type="text"
+                      class="form-control fs-5"
+                      id="player-cost"
+                      value=""
+                    />
+                  </div>
+                </div>
+                <!-- calculation-button-start  -->
+                <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                  <button
+                    id="calculate-btn"
+                    class="btn btn-primary bg-black text-danger fs-4"
+                    type="button"
+                  >
+                    Calculate
+                  </button>
+                </div>
+                <div class="mb-4">
+                  <h5 class="fs-4 mb-3 fw-semibold ms-2 my-4">
+                    Player Expenses <span>$ </span
+                    ><span id="player-expenses">00</span>
+                  </h5>
+                </div>
+                <!-- manager expense div start  -->
+                <div class="row mb-3">
+                  <label
+                    for="manager-expense"
+                    class="col-sm-4 col-form-label fs-4 text-center mb-1 fw-semibold"
+                    >Manager</label
+                  >
+                  <div class="col-sm-6">
+                    <input
+                      type="text"
+                      class="form-control fs-5"
+                      id="manager-expense"
+                      value=""
+                    />
+                  </div>
+                </div>
+                <!-- coach expense div start  -->
+                <div class="row mb-3">
+                  <label
+                    for="coach-expense"
+                    class="col-sm-4 col-form-label fs-4 text-center mb-2 fw-semibold"
+                    >Coach</label
+                  >
+                  <div class="col-sm-6">
+                    <input
+                      type="text"
+                      class="form-control fs-5"
+                      id="coach-expense"
+                      value=""
+                    />
+                  </div>
+                </div>
+                <!-- calculate button here  -->
+                <div class="d-grid gap-2 col-10 mx-auto mb-3">
+                  <button
+                    id="total-btn"
+                    class="btn btn-primary bg-black text-danger fs-4"
+                    type="button"
+                  >
+                    Calculate Total
+                  </button>
+                </div>
+                <!-- total expenses here  -->
+                <div>
+                  <h5 class="fs-4 text-center mb-2 fw-semibold">
+                    Total $ <span id="total-expense">00</span>
+                  </h5>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- footer section  -->
+    <footer class="text-danger text-center my-5 p-5">
+      <h5>Copyright @ 2022 All Rights Reserved</h5>
+    </footer>
     <script src="./js/assingment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
+
 </html>
