final project done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                       class="btn btn-primary bg-black text-danger fs-4"
                       type="button"
                     >
-                      Button
+                      Select
                     </button>
                   </div>
                 </div>
@@ -91,7 +91,7 @@
                       class="btn btn-primary bg-black text-danger fs-4"
                       type="button"
                     >
-                      Button
+                    Select
                     </button>
                   </div>
                 </div>
@@ -114,7 +114,7 @@
                       class="btn btn-primary bg-black text-danger fs-4"
                       type="button"
                     >
-                      Button
+                    Select
                     </button>
                   </div>
                 </div>
@@ -137,7 +137,7 @@
                       class="btn btn-primary bg-black text-danger fs-4"
                       type="button"
                     >
-                      Button
+                    Select
                     </button>
                   </div>
                 </div>
@@ -160,7 +160,7 @@
                       class="btn btn-primary bg-black text-danger fs-4"
                       type="button"
                     >
-                      Button
+                    Select
                     </button>
                   </div>
                 </div>
@@ -183,7 +183,7 @@
                       class="btn btn-primary bg-black text-danger fs-4"
                       type="button"
                     >
-                      Button
+                    Select
                     </button>
                   </div>
                 </div>
